--- a/src/components/Goods/style.css
+++ b/src/components/Goods/style.css
@@ -1,14 +1,19 @@
 .goods-wrap {
   display: inline-block;
-  width: 70%; }
-  .goods-wrap .good-item {
-    float: left;
-    width: 130px;
-    border: 1px solid #aaa;
-    margin: 5px;
-    border-radius: 5px;
-    padding: 5px 0;
-    text-align: center;
-    cursor: pointer; }
-    .goods-wrap .good-item:hover {
-      border: 1px solid #fff000; }
+  width: 75%; }
+
+.goods-wrap .good-item {
+  float: left;
+  width: 140px;
+  border: 1px solid #aaa;
+  margin: 5px;
+  border-radius: 5px;
+  padding: 5px 0;
+  text-align: center;
+  cursor: pointer; }
+
+.goods-wrap .good-item p {
+  line-height: 26px; }
+
+.goods-wrap .good-item:hover {
+  border: 1px solid #fff000; }
