--- a/src/components/Keyboard/style.css
+++ b/src/components/Keyboard/style.css
@@ -1,17 +1,28 @@
 .keyboard-wrap {
   display: inline-block;
   vertical-align: top;
-  width: 30%; }
-  .keyboard-wrap .keyboard-item {
-    float: left;
-    width: 130px;
-    height: 44px;
-    line-height: 34px;
-    border: 1px solid #aaa;
-    margin: 5px;
-    border-radius: 5px;
-    padding: 5px 0;
-    text-align: center;
-    cursor: pointer; }
-    .keyboard-wrap .keyboard-item:hover {
-      border: 1px solid #fff000; }
+  width: 25%; }
+
+.keyboard-wrap .numscreen {
+  border: 1px solid #aaa;
+  margin: 5px;
+  border-radius: 5px;
+  padding: 5px 0;
+  text-align: center;
+  font-size: 40px;
+  height: 65px; }
+
+.keyboard-wrap .keyboard-item {
+  float: left;
+  width: 143px;
+  height: 44px;
+  line-height: 34px;
+  border: 1px solid #aaa;
+  margin: 5px;
+  border-radius: 5px;
+  padding: 5px 0;
+  text-align: center;
+  cursor: pointer; }
+
+.keyboard-wrap .keyboard-item:hover {
+  border: 1px solid #fff000; }
