--- a/src/components/Keyboard/style.scss
+++ b/src/components/Keyboard/style.scss
@@ -1,10 +1,19 @@
-.keyboard-wrap{
-    display: inline-block;
-    vertical-align: top;
-    width: 30%;
-    .keyboard-item {
+.keyboard-wrap {
+  display: inline-block;
+  vertical-align: top;
+  width: 25%;
+  .numscreen {
+    border: 1px solid #aaa;
+    margin: 5px;
+    border-radius: 5px;
+    padding: 5px 0;
+    text-align: center;
+    font-size: 40px;
+    height: 65px;
+  }
+  .keyboard-item {
     float: left;
-    width: 130px;
+    width: 143px;
     height: 44px;
     line-height: 34px;
     border: 1px solid #aaa;
@@ -12,7 +21,7 @@
     border-radius: 5px;
     padding: 5px 0;
     text-align: center;
-    cursor:pointer;
+    cursor: pointer;
     &:hover {
       border: 1px solid #fff000;
     }
